# base-ceps

./: pyproject.toml
base_ceps/: ceps.py  configs.py
data/: cep_unicos.csv
tests/: test_base_ceps.py
